--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "hardhat-project",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.8",
-    "hardhat": "^2.9.7"
-  }
+    "name": "hardhat-project",
+    "scripts": {
+        "build": "npx hardhat run scripts/deploy.js --network goerli"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.6",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
+        "chai": "^4.3.6",
+        "ethereum-waffle": "^3.4.4",
+        "ethers": "^5.6.8",
+        "hardhat": "^2.9.7"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^4.6.0"
+    }
 }
